css/style.css
/*** Basics ***/

a {
    color: #3F51B5;
    text-decoration: none
}

a:hover {
    color: #E91E63
}

p,
pre {
    margin-bottom: 15px;
}

pre,
code {
    white-space: pre-wrap;
    /* css-3 */
    white-space: -moz-pre-wrap;
    /* Mozilla, since 1999 */
    white-space: -pre-wrap;
    /* Opera 4-6 */
    white-space: -o-pre-wrap;
    /* Opera 7 */
    word-wrap: break-word;
    /* Internet Explorer 5.5+ */
}

ul,
ol {
    padding: 0 0 18px 30px;
}

em,
i {
    font-style: italic;
}

strong,
b {
    font-weight: bold;
}

small {
    font-size: 0.85em;
}

sup {
    vertical-align: super;
    font-size: 0.85em;
}

sub {
    vertical-align: sub;
    font-size: 0.85em;
}

code {
    font: 0.85em Monaco, Courier, Monospace;
}

blockquote {
    margin: 22px 22px;
    padding: 0 20px;
    border-left: 2px solid #000000;
    font-style: italic;
}

acronym,
abbr {
    cursor: help;
    letter-spacing: 1px;
    border-bottom: 1px dashed;
}


/*** Structure ***/

body {
    font-family: sans-serif;
    font-size: 0.9em;
    line-height: 160%;
    color: #444;
}

.intro {
    width: 250px;
    float: left;
    margin-right: 40px;
    margin-bottom: 40px;
    overflow: hidden;
}

#main-container {
    text-align: left;
    width: 900px;
    margin-right: auto;
    margin-left: auto;
}

header .subtitle {
    color: #777;
    font-style: italic;
    font-family: serif;
    font-size: 1.3em
}

main {
    width: 580px;
    float: left;
    margin-right: 40px;
    overflow: hidden;
}

main img {
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px
}

footer {
    margin-top: 60px;
    width: 800px;
    margin-left: auto;
    margin-right: auto;
    color: #777;
    border-top: 1px solid #aaa;
    text-align: center;
}

.sidebar {
    float: right;
    width: 280px;
}

.featured {
    margin-top: 10px;
    margin-bottom: 10px;
}

#social {
    text-align: right;
    list-style-type: none;
    padding: 0;
}

#social li,
#social ul {
    display: inline;
}


/*** Useful Classes ***/

.clear {
    clear: both;
}

.float-left {
    float: left;
}

.float-right {
    float: right;
}

.text-left {
    text-align: left;
}

.text-right {
    text-align: right;
}

.text-center {
    text-align: center;
}

.text-justify {
    text-align: justify;
}

.img-left {
    float: left;
    margin: 4px 10px 4px 0;
}

.img-right {
    float: right;
    margin: 4px 0 4px 10px;
}

.img-middle {
    vertical-align: middle;
}

.nopadding {
    padding: 0;
}

.nounderline {
    text-decoration: underline;
}


/*** Posts ***/

.post-title {
    margin-top: 30px;
    text-decoration: none;
    color: #666;
}

.post-title a {
    color: #666;
}

article {
    margin-bottom: 40px;
}

article a {
    color: #2334ff;
    text-decoration: underline;
}

article h1 {
    font-size: 17px;
    line-height: 20px;
    margin: 0 0 10px 0;
}

article h1 a {
    border: none;
}

article img {
    display: block;
    text-align: center;
    margin: 0 auto 1em auto;
}

article .meta {
    padding-top: 6px;
    font-size: 0.85em;
    font-style: italic;
}

img {
    display: block;
    text-align: center;
    max-width: 100%;
    max-height: 400px;
}


/*** Pagination ***/

.postnavigation {
    text-align: center;
    font-size: 0.85em;
}

.postnavigation .left {
    float: left;
}

.postnavigation .right {
    float: right;
}

.featured {
    list-style: none;
    padding-left: 0;
}

.goals {
    list-style: none;
    padding-left: 0;
}

.postdescription {
    font-style: italic;
    font-family: serif;
    color: #777;
    line-height: 100%;
}

.search {
    height: 68px;
}

.site-tag a {
    display: inline-block;
    margin-right: 12px;
}

.title {
    color: #000;
}

.footnotes {
    margin-top: 60px;
    border-top: 1px dotted #aaa;
}

.videoWrapper {
    position: relative;
    padding-bottom: 56.25%;
    /* 16:9 */
    padding-top: 25px;
    height: 0;
}

.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}


/*** Media Queries ***/

@media all and (max-width: 870px) {
    #main-container {
        width: inherit;
        padding-left: 10px;
        padding-right: 10px;
    }
    #page,
    .post-title,
    .post,
    footer,
    header,
    main {
        width: 100%;
    }
    #social {
        text-align: center;
        margin-top: -20px;
    }
    .intro {
        float: none;
        display: block;
        max-height: 60px;
        margin-left: auto;
        margin-right: auto;
        padding-top: 10px;
    }
    .sidebar {
        position: relative;
        text-align: left;
        width: 100%;
        margin: 10px 10px 20px 10px;
    }
}

